--- a/all-together.html
+++ b/all-together.html
@@ -47,7 +47,7 @@
     </ul>
         </section>
                 <section>
-                    <form action="https://unsplash.com/s/photos/moon">
+                    <form action="index.html">
                         <p>do you want to know more</p>
                         <button type="submit">submit</button>
                     </form>
