assignment 1 uploaded with correction in all files

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- Book Now Section -->
     <h2>Book Now</h2>
-    <form action ="all-together.html>
+    <form action ="all-together.html">
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name" required><br><br>
 
