successfully updated assignment 3

--- a/index.html
+++ b/index.html
@@ -3,44 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laundry services</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Assingment 3</title>
+    <link rel="stylesheet" href="assignment3.css">
 </head>
 <body>
-    <nav>
-        <div class="logo">Logo</div>
-        <div class="nav-links">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-        </div>
-        <div><button class="username">Username</button></div>
-        
-    </nav>
-
-    <section class="hero">
-  <div class="hero-left">
-    <h1>Revitalize Your Clothes with Expert <span>Laundry Services!</span></h1>
-    <p>
-      From premium dry cleaning to swift wash and fold, we deliver care and convenience. 
-      Schedule a pickup and rediscover the freshness of your clothes today!
-    </p>
-
-    <form action="level1.html">
-      <button type="submit" class="hero-btn">Book service now</button>
-    </form>
-  </div>
-
-  <div class="hero-right">
-    <img src="laundry.png" alt="Laundry Image">
-  </div>
-</section>
-
-</div>
+    <div class="header">
+        <h2>Hello</h2>
+    </div>
+    <div class="color-main">
+        <div class="box" id="Red-box">Red</div>
+        <div class="box" id="Blue-box">Blue</div>
+        <div class="box" id="Green-box">Green</div>
+        <div class="box" id="Yellow-box">Yellow</div>
+    </div>
+    <div class="greet-form">
+        <form id="greet-form">
             
-
+            <input placeholder="Enter your Name" id="name" name="name" required>
+            <button type="submit" id="greet-btn">Greet Me</button>
+        </form>
+    </div>
+    <script src="assignment3.js"></script>
 </body>
 </html>
